@@ -45,6 +45,7 @@ import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 
@@ -60,7 +61,7 @@ public class Alchemist extends CoinKit implements Listener {
     private static final int health = 210;
     private static final double regen = 10.5;
     private static final double meleeDamage = 26;
-    private static final int ladderCount = 5;
+    private static final int bottleCount = 5;
 
     /**
      * Creates the basics for Alchemist
@@ -74,50 +75,81 @@ public class Alchemist extends CoinKit implements Listener {
 
         // Brewing Stand
         stand = CSItemCreator.weapon(new ItemStack(Material.BREWING_STAND),
-                Component.text("Brewing Stand", NamedTextColor.LIGHT_PURPLE),
+                Component.text("Brewing Stand", NamedTextColor.GREEN),
                 Arrays.asList(Component.empty(),
-                        Component.text("Place the brewing stand down, then", NamedTextColor.AQUA),
-                        Component.text("right click it to get a positive potion.", NamedTextColor.AQUA),
+                        Component.text("Place to begin brewing.", NamedTextColor.BLUE),
                         Component.empty(),
-                        Component.text("left click it to get a negative potion.", NamedTextColor.AQUA),
-                        Component.text("(tip): This brewing stand is a weapon, so you", NamedTextColor.AQUA),
-                        Component.text("can beat your enemies to death with it.", NamedTextColor.AQUA)),
-                Collections.singletonList(new Tuple<>(Enchantment.LOYALTY, 1)), meleeDamage);
+                        Component.text("Once placed, interact with a bottle to brew.", NamedTextColor.BLUE),
+                        Component.keybind("key.use").append(Component.text(" to brew a positive potion.", NamedTextColor.BLUE)),
+                        Component.keybind("key.attack").append(Component.text(" to brew a negative potion.", NamedTextColor.BLUE)),
+                        Component.empty(),
+                        Component.text("26 Melee Damage", NamedTextColor.DARK_GREEN)),
+                new ArrayList<>(), meleeDamage);
         es.hotbar[0] = stand;
         // Voted Brewing Stand
         standVoted = CSItemCreator.weapon(new ItemStack(Material.BREWING_STAND),
-                Component.text("Brewing Stand", NamedTextColor.LIGHT_PURPLE),
-                Arrays.asList(Component.text(""),
-                        Component.text("Place the brewing stand down, then", NamedTextColor.AQUA),
-                        Component.text("right click it to get a potion.", NamedTextColor.AQUA),
-                                Component.text(""),
-                        Component.text("(tip): This brewing stand is a weapon, so you", NamedTextColor.AQUA),
-                        Component.text("can beat your enemies to death with it.", NamedTextColor.AQUA)),
-                Arrays.asList(new Tuple<>(Enchantment.LOOT_BONUS_MOBS, 0),
-                        new Tuple<>(Enchantment.LOYALTY, 1)), meleeDamage + 2);
+                Component.text("Brewing Stand", NamedTextColor.GREEN),
+                Arrays.asList(Component.empty(),
+                        Component.text("Place to begin brewing.", NamedTextColor.BLUE),
+                        Component.empty(),
+                        Component.text("Once placed, interact with a bottle to brew.", NamedTextColor.BLUE),
+                        Component.keybind("key.use").append(Component.text(" to brew a positive potion.", NamedTextColor.BLUE)),
+                        Component.keybind("key.attack").append(Component.text(" to brew a negative potion.", NamedTextColor.BLUE)),
+                        Component.empty(),
+                        Component.text("28 Melee Damage", NamedTextColor.DARK_GREEN),
+                        Component.text("⁎ Voted: +2 Melee Damage", NamedTextColor.GREEN)),
+                List.of(new Tuple<>(Enchantment.LOOT_BONUS_MOBS, 0)), meleeDamage + 2);
         es.votedWeapon = new Tuple<>(standVoted, 0);
 
         // Chestplate
         es.chest = CSItemCreator.leatherArmor(new ItemStack(Material.LEATHER_CHESTPLATE),
-                Component.text("Leather Chestplate", NamedTextColor.GREEN), null, null,
+                Component.text("Leather Chestplate", NamedTextColor.GREEN),
+                List.of(Component.empty(),
+                        Component.text(health + " HP", NamedTextColor.DARK_GREEN),
+                        Component.text(regen + " Regen", NamedTextColor.DARK_GREEN)), null,
                 Color.fromRGB(226, 165, 43));
 
         // Leggings
         es.legs = CSItemCreator.leatherArmor(new ItemStack(Material.LEATHER_LEGGINGS),
-                Component.text("Leather Leggings", NamedTextColor.GREEN), null, null,
+                Component.text("Leather Leggings", NamedTextColor.GREEN),
+                List.of(Component.empty(),
+                        Component.text(health + " HP", NamedTextColor.DARK_GREEN),
+                        Component.text(regen + " Regen", NamedTextColor.DARK_GREEN)), null,
                 Color.fromRGB(226, 173, 65));
 
         // Boots
         es.feet = CSItemCreator.item(new ItemStack(Material.GOLDEN_BOOTS),
-                Component.text("Golden Boots", NamedTextColor.GREEN), null, null);
+                Component.text("Golden Boots", NamedTextColor.GREEN),
+                List.of(Component.empty(),
+                        Component.text(health + " HP", NamedTextColor.DARK_GREEN),
+                        Component.text(regen + " Regen", NamedTextColor.DARK_GREEN)), null);
         // Voted Boots
         es.votedFeet = CSItemCreator.item(new ItemStack(Material.GOLDEN_BOOTS),
                 Component.text("Golden Boots", NamedTextColor.GREEN),
-                Collections.singletonList(Component.text("- voted: Depth Strider II", NamedTextColor.AQUA)),
+                List.of(Component.empty(),
+                        Component.text(health + " HP", NamedTextColor.DARK_GREEN),
+                        Component.text(regen + " Regen", NamedTextColor.DARK_GREEN),
+                        Component.empty(),
+                        Component.text("⁎ Voted: Depth Strider II", NamedTextColor.DARK_AQUA)),
                 Collections.singletonList(new Tuple<>(Enchantment.DEPTH_STRIDER, 2)));
 
-        es.hotbar[1] = new ItemStack(Material.GLASS_BOTTLE, ladderCount);
-        es.votedLadders = new Tuple<>(new ItemStack(Material.GLASS_BOTTLE, ladderCount + 1), 1);
+        es.hotbar[1] = CSItemCreator.item(new ItemStack(Material.GLASS_BOTTLE, bottleCount),
+                Component.text("Glass Bottle", NamedTextColor.GREEN),
+                List.of(Component.empty(),
+                        Component.text("Use on a brewing stand to brew.", NamedTextColor.BLUE),
+                        Component.keybind("key.use").append(Component.text(" to brew a positive potion.", NamedTextColor.BLUE)),
+                        Component.keybind("key.attack").append(Component.text(" to brew a negative potion.", NamedTextColor.BLUE))),
+        null);
+
+        es.votedLadders = new Tuple<>(CSItemCreator.item(new ItemStack(Material.GLASS_BOTTLE, bottleCount + 1),
+                Component.text("Glass Bottle", NamedTextColor.GREEN),
+                List.of(Component.empty(),
+                        Component.text("Use on a brewing stand to brew.", NamedTextColor.BLUE),
+                        Component.keybind("key.use").append(Component.text(" to brew a positive potion.", NamedTextColor.BLUE)),
+                        Component.keybind("key.attack").append(Component.text(" to brew a negative potion.", NamedTextColor.BLUE)),
+                        Component.empty(),
+                        Component.text("+1 from voting", NamedTextColor.DARK_AQUA)),
+                null), 1);
 
         super.equipment = es;
 
@@ -188,6 +220,7 @@ public class Alchemist extends CoinKit implements Listener {
                         Bukkit.getScheduler().runTask(Main.plugin, () -> hit.addPotionEffect(effect));
                         if (hit.getPlayer() != damager && !isEnemy)
                             UpdateStats.addHeals(damager.getUniqueId(), 2);
+
                     // Friendly Potions
                     } else if (potionType.equals(PotionEffectType.SPEED)
                             || potionType.equals(PotionEffectType.JUMP)
@@ -246,41 +279,40 @@ public class Alchemist extends CoinKit implements Listener {
     @EventHandler
     public void onRemove(PlayerInteractEvent e) {
         // Prevent using in lobby
-        if (InCombat.isPlayerInLobby(e.getPlayer().getUniqueId())) {
+        if (InCombat.isPlayerInLobby(e.getPlayer().getUniqueId()))
             return;
-        }
+        if (e.getAction() != Action.LEFT_CLICK_BLOCK)
+            return;
+        if (Objects.requireNonNull(e.getClickedBlock()).getType() != Material.BREWING_STAND)
+            return;
 
-        if (e.getAction() == Action.LEFT_CLICK_BLOCK &&
-                Objects.requireNonNull(e.getClickedBlock()).getType() == Material.BREWING_STAND) {
-            Player destroyer = e.getPlayer();
-            Player placer = getPlacer(e.getClickedBlock());
+        Player destroyer = e.getPlayer();
+        Player placer = getPlacer(e.getClickedBlock());
 
-            // Pick up own brewing stand
-            if (Objects.equals(destroyer, placer)) {
-                if (!placer.getInventory().getItemInMainHand().getType().equals(Material.GLASS_BOTTLE)) {
-                    destroyStand(placer);
-                    Messenger.sendActionInfo("You took back your brewing stand!", placer);
-                    destroyer.playSound(e.getClickedBlock().getLocation(), Sound.AMBIENT_UNDERWATER_ENTER, 3, 1);
-                    // Can only hold 1 brewing stand at a time
-                    PlayerInventory inv = destroyer.getInventory();
-                    if (inv.getItemInOffHand().getType() != Material.BREWING_STAND &&
-                            !inv.contains(Material.BREWING_STAND)) {
-                        if (!CSActiveData.getData(destroyer.getUniqueId()).hasVote("sword")) {
-                            destroyer.getInventory().addItem(stand);
-                        } else {
-                            destroyer.getInventory().addItem(standVoted);
-                        }
+        // Pick up own brewing stand
+        if (Objects.equals(destroyer, placer)) {
+            if (!placer.getInventory().getItemInMainHand().getType().equals(Material.GLASS_BOTTLE)) {
+                destroyStand(placer);
+                Messenger.sendActionInfo("You took back your brewing stand!", placer);
+                destroyer.playSound(e.getClickedBlock().getLocation(), Sound.AMBIENT_UNDERWATER_ENTER, 3, 1);
+                // Can only hold 1 brewing stand at a time
+                PlayerInventory inv = destroyer.getInventory();
+                if (inv.getItemInOffHand().getType() != Material.BREWING_STAND &&
+                        !inv.contains(Material.BREWING_STAND)) {
+                    if (!CSActiveData.getData(destroyer.getUniqueId()).hasVote("sword")) {
+                        destroyer.getInventory().addItem(stand);
+                    } else {
+                        destroyer.getInventory().addItem(standVoted);
                     }
                 }
-
-                // Destroy enemy brewing stand
-            } else if (placer != null &&
-                    TeamController.getTeam(destroyer.getUniqueId())
-                            != TeamController.getTeam(placer.getUniqueId())){
-                destroyStand(placer);
-                destroyer.playSound(e.getClickedBlock().getLocation(), Sound.AMBIENT_UNDERWATER_ENTER , 5, 1);
-                Messenger.sendActionWarning("You destroyed " + CSNameTag.mmUsername(placer) + "'s brewing stand!", destroyer);
             }
+
+        // Destroy enemy brewing stand
+        } else if (placer != null &&
+                TeamController.getTeam(destroyer.getUniqueId()) != TeamController.getTeam(placer.getUniqueId())) {
+            destroyStand(placer);
+            destroyer.playSound(e.getClickedBlock().getLocation(), Sound.AMBIENT_UNDERWATER_ENTER , 5, 1);
+            Messenger.sendActionWarning("You destroyed " + CSNameTag.mmUsername(placer) + "'s brewing stand!", destroyer);
         }
     }
 
@@ -391,17 +423,18 @@ public class Alchemist extends CoinKit implements Listener {
         ItemStack usedItem = e.getItem();
 
         // Prevent using in lobby
-        if (InCombat.isPlayerInLobby(player.getUniqueId())) {
+        if (!Objects.equals(Kit.equippedKits.get(player.getUniqueId()).name, name) || InCombat.isPlayerInLobby(player.getUniqueId())) {
             return;
         }
-
-        if (!Objects.equals(Kit.equippedKits.get(player.getUniqueId()).name, name) ||
-                Objects.requireNonNull(e.getClickedBlock()).getType() == Material.BREWING_STAND) {
+        if ((e.getAction() != Action.RIGHT_CLICK_BLOCK && e.getAction() != Action.LEFT_CLICK_BLOCK)) {
+            return;
+        }
+        if (Objects.requireNonNull(e.getClickedBlock()).getType() != Material.BREWING_STAND) {
             return;
         }
 
         // Check if an alchemist tries to brew a potion, while off-cooldown
-        if ((e.getAction() == Action.RIGHT_CLICK_BLOCK || e.getAction() == Action.LEFT_CLICK_BLOCK) &&
+        if (Objects.requireNonNull(e.getClickedBlock()).getType() == Material.BREWING_STAND &&
                 usedItem != null && usedItem.getType() == Material.GLASS_BOTTLE &&
                 player.getCooldown(Material.GLASS_BOTTLE) == 0) {
 
@@ -542,7 +575,7 @@ public class Alchemist extends CoinKit implements Listener {
                     itemStack.setItemMeta(potionMeta);
                     break;
                 case 13:
-                    potionMeta.addCustomEffect(new PotionEffect(PotionEffectType.SPEED, 220, 3), true);
+                    potionMeta.addCustomEffect(new PotionEffect(PotionEffectType.SPEED, 220, 1), true);
                     potionMeta.addCustomEffect(new PotionEffect(PotionEffectType.FAST_DIGGING, 220, 1), true);
                     potionMeta.addCustomEffect(new PotionEffect(PotionEffectType.JUMP, 220, 0), true);
                     potionMeta.setColor(Color.fromRGB(0, 255, 34));
@@ -550,7 +583,7 @@ public class Alchemist extends CoinKit implements Listener {
                     itemStack.setItemMeta(potionMeta);
                     break;
                 case 14:
-                    potionMeta.addCustomEffect(new PotionEffect(PotionEffectType.SPEED, 160, 5), true);
+                    potionMeta.addCustomEffect(new PotionEffect(PotionEffectType.SPEED, 160, 2), true);
                     potionMeta.addCustomEffect(new PotionEffect(PotionEffectType.FAST_DIGGING, 160, 2), true);
                     potionMeta.addCustomEffect(new PotionEffect(PotionEffectType.JUMP, 160, 1), true);
                     potionMeta.addCustomEffect(new PotionEffect(PotionEffectType.INCREASE_DAMAGE, 160, 3), true);
@@ -689,7 +722,7 @@ public class Alchemist extends CoinKit implements Listener {
         ArrayList<Component> kitLore = new ArrayList<>();
         kitLore.add(Component.text("A support kit that makes use", NamedTextColor.GRAY));
         kitLore.add(Component.text("of many different kinds of potions", NamedTextColor.GRAY));
-        kitLore.addAll(getBaseStats(health, regen, meleeDamage, ladderCount));
+        kitLore.addAll(getBaseStats(health, regen, meleeDamage, bottleCount));
         kitLore.add(Component.empty());
         kitLore.add(Component.text("Effects:", NamedTextColor.DARK_PURPLE));
         kitLore.add(Component.text("- Speed I", NamedTextColor.GRAY));
