@@ -11,6 +11,7 @@ import me.huntifi.castlesiege.maps.MapController;
 import me.huntifi.conwymc.data_types.Tuple;
 import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.format.NamedTextColor;
+import net.kyori.adventure.text.format.TextColor;
 import org.bukkit.Bukkit;
 import org.bukkit.Material;
 import org.bukkit.enchantments.Enchantment;
@@ -28,6 +29,7 @@ import org.bukkit.scheduler.BukkitRunnable;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 import java.util.Objects;
 import java.util.UUID;
 
@@ -58,13 +60,17 @@ public class Berserker extends CoinKit implements Listener {
 
         // Weapon
         regularSword = CSItemCreator.weapon(new ItemStack(Material.IRON_SWORD),
-                Component.text("Iron Sword", NamedTextColor.GREEN), null,
+                Component.text("Iron Sword", NamedTextColor.GREEN),
+                List.of(Component.empty(),
+                        Component.text(meleeDamage + " Melee Damage", NamedTextColor.DARK_GREEN)),
                 Collections.singletonList(new Tuple<>(Enchantment.LOOT_BONUS_MOBS, 0)), meleeDamage);
         es.hotbar[0] = regularSword;
         // Voted Weapon
         regularSwordVoted = CSItemCreator.weapon(new ItemStack(Material.IRON_SWORD),
                 Component.text("Iron Sword", NamedTextColor.GREEN),
-                Collections.singletonList(Component.text("- voted: +2 damage", NamedTextColor.AQUA)),
+                List.of(Component.empty(),
+                        Component.text((meleeDamage + 2) + " Melee Damage", NamedTextColor.DARK_GREEN),
+                        Component.text("⁎ Voted: +2 Melee Damage", NamedTextColor.GREEN)),
                 Collections.singletonList(new Tuple<>(Enchantment.LOOT_BONUS_MOBS, 0)), meleeDamage + 2);
         es.votedWeapon = new Tuple<>(regularSwordVoted, 0);
 
@@ -74,16 +80,29 @@ public class Berserker extends CoinKit implements Listener {
 
         // Potion Item
         es.hotbar[1] = CSItemCreator.item(new ItemStack(Material.POTION, 1),
-                Component.text("Berserker Potion", NamedTextColor.GOLD), null, null);
+                Component.text("Berserker Potion", NamedTextColor.GOLD),
+                List.of(Component.empty(),
+                        Component.text("<< Right Click To Use >>", NamedTextColor.DARK_GRAY),
+                        Component.text("Drink to enter berserk mode", NamedTextColor.GRAY),
+                        Component.empty(),
+                        Component.text("+ 54.5 Melee Damage", NamedTextColor.DARK_GREEN),
+                        Component.text("○ Strength I (0:20)", TextColor.color(40, 169, 255)),
+                        Component.text("○ Speed II (0:20)", TextColor.color(40, 169, 255)),
+                        Component.text("○ Nausea II (0:20)", NamedTextColor.RED)),
+                        null);
 
         // Berserk Weapon
         berserkSword = CSItemCreator.weapon(new ItemStack(Material.IRON_SWORD),
-                Component.text("Berserker Sword", NamedTextColor.GREEN), null,
+                Component.text("Berserker Sword", NamedTextColor.GREEN),
+                List.of(Component.empty(),
+                        Component.text("105.5 Melee Damage", NamedTextColor.DARK_GREEN)),
                 Collections.singletonList(new Tuple<>(Enchantment.KNOCKBACK, 1)), meleeDamageZerk);
         // Voted Berserk Weapon
         berserkSwordVoted = CSItemCreator.weapon(new ItemStack(Material.IRON_SWORD),
                 Component.text("Berserker Sword", NamedTextColor.GREEN),
-                Collections.singletonList(Component.text("- voted: +2 damage", NamedTextColor.AQUA)),
+                List.of(Component.empty(),
+                        Component.text("107.5 Melee Damage", NamedTextColor.DARK_GREEN),
+                        Component.text("⁎ Voted: +2 Melee Damage", NamedTextColor.DARK_AQUA)),
                 Arrays.asList(new Tuple<>(Enchantment.LOOT_BONUS_MOBS, 0),
                         new Tuple<>(Enchantment.KNOCKBACK, 1)), meleeDamageZerk + 2);
 
@@ -196,7 +215,7 @@ public class Berserker extends CoinKit implements Listener {
         kitLore.add(Component.text(" ", NamedTextColor.GRAY));
         kitLore.add(Component.text("Berserk Effects:", NamedTextColor.DARK_PURPLE));
         kitLore.add(Component.text("- Speed II", NamedTextColor.GRAY));
-        kitLore.add(Component.text("- Confusion II", NamedTextColor.GRAY));
+        kitLore.add(Component.text("- Nausea II", NamedTextColor.GRAY));
         kitLore.add(Component.text("- Strength I", NamedTextColor.GRAY));
         kitLore.add(Component.text("- Melee hits deal 105+ damage", NamedTextColor.GRAY));
         return kitLore;
