@@ -28,6 +28,7 @@ import org.bukkit.potion.PotionEffectType;
 
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.List;
 import java.util.Objects;
 
 /**
@@ -35,49 +36,65 @@ import java.util.Objects;
  */
 public class Executioner extends CoinKit implements Listener {
 
-	private static final int health = 210;
-	private static final double regen = 15;
-	private static final double meleeDamage = 48;
+	private static final int health = 248;
+	private static final double regen = 12.5;
+	private static final double meleeDamage = 42.5;
 	private static final int ladderCount = 4;
 
 	/**
 	 * Set the equipment and attributes of this kit
 	 */
 	public Executioner() {
-		super("Executioner", health, regen, Material.DIAMOND_AXE);
+		super("Executioner", health, regen, Material.IRON_AXE);
 		super.canSeeHealth = true;
 
 		// Equipment Stuff
 		EquipmentSet es = new EquipmentSet();
                 
 		// Weapon
-		es.hotbar[0] = CSItemCreator.weapon(new ItemStack(Material.DIAMOND_AXE),
-				Component.text("Diamond Axe", NamedTextColor.GREEN), null, null, meleeDamage);
+		es.hotbar[0] = CSItemCreator.weapon(new ItemStack(Material.IRON_AXE),
+				Component.text("Execution Axe", NamedTextColor.GREEN),
+				List.of(Component.empty(),
+						Component.text("48 Melee Damage", NamedTextColor.DARK_GREEN)), null, meleeDamage);
 		// Voted Weapon
 		es.votedWeapon = new Tuple<>(
-				CSItemCreator.weapon(new ItemStack(Material.DIAMOND_AXE),
-						Component.text("Diamond Axe", NamedTextColor.GREEN),
-						Collections.singletonList(Component.text("- voted: +2 damage", NamedTextColor.AQUA)),
+				CSItemCreator.weapon(new ItemStack(Material.IRON_AXE),
+						Component.text("Execution Axe", NamedTextColor.GREEN),
+						List.of(Component.empty(),
+								Component.text("50 Melee Damage", NamedTextColor.DARK_GREEN),
+								Component.text("⁎ Voted: +2 Melee Damage", NamedTextColor.DARK_AQUA)),
 						Collections.singletonList(new Tuple<>(Enchantment.LOOT_BONUS_MOBS, 0)), meleeDamage + 2),
 				0);
                 
 		// Chestplate
 		es.chest = CSItemCreator.leatherArmor(new ItemStack(Material.LEATHER_CHESTPLATE),
-				Component.text("Leather Chestplate", NamedTextColor.GREEN), null, null,
+				Component.text("Leather Chestplate", NamedTextColor.GREEN),
+				List.of(Component.empty(),
+						Component.text(health + " HP", NamedTextColor.DARK_GREEN),
+						Component.text(regen + " Regen", NamedTextColor.DARK_GREEN)), null,
 				Color.fromRGB(32, 32, 32));
                 
 		// Leggings
 		es.legs = CSItemCreator.leatherArmor(new ItemStack(Material.LEATHER_LEGGINGS),
-				Component.text("Leather Leggings", NamedTextColor.GREEN), null, null,
+				Component.text("Leather Leggings", NamedTextColor.GREEN),
+				List.of(Component.empty(),
+						Component.text(health + " HP", NamedTextColor.DARK_GREEN),
+						Component.text(regen + " Regen", NamedTextColor.DARK_GREEN)), null,
 				Color.fromRGB(32, 32, 32));
                 
 		// Boots
 		es.feet = CSItemCreator.item(new ItemStack(Material.IRON_BOOTS),
-				Component.text("Iron Boots", NamedTextColor.GREEN), null, null);
+				Component.text("Iron Boots", NamedTextColor.GREEN),
+				List.of(Component.empty(),
+						Component.text(health + " HP", NamedTextColor.DARK_GREEN),
+						Component.text(regen + " Regen", NamedTextColor.DARK_GREEN)), null);
 		// Voted Boots
 		es.votedFeet = CSItemCreator.item(new ItemStack(Material.IRON_BOOTS),
 				Component.text("Iron Boots", NamedTextColor.GREEN),
-				Collections.singletonList(Component.text("- voted: Depth Strider II", NamedTextColor.AQUA)),
+				List.of(Component.empty(),
+						Component.text(health + " HP", NamedTextColor.DARK_GREEN),
+						Component.text(regen + " Regen", NamedTextColor.DARK_GREEN),
+						Component.text("⁎ Voted: Depth Strider II", NamedTextColor.DARK_AQUA)),
 				Collections.singletonList(new Tuple<>(Enchantment.DEPTH_STRIDER, 2)));
                 
 		// Ladders
@@ -108,7 +125,7 @@ public class Executioner extends CoinKit implements Listener {
 
 			// Executioner hits with axe
 			if (Objects.equals(Kit.equippedKits.get(attacker.getUniqueId()).name, name) &&
-					attacker.getInventory().getItemInMainHand().getType() == Material.DIAMOND_AXE) {
+					attacker.getInventory().getItemInMainHand().getType() == Material.IRON_AXE) {
 
 				AttributeInstance healthAttribute = defAttri.getAttribute(Attribute.GENERIC_MAX_HEALTH);
 				assert healthAttribute != null;
@@ -128,7 +145,6 @@ public class Executioner extends CoinKit implements Listener {
 
 						DeathEvent.setKiller(p, attacker);
 					}
-
 					defender.getWorld().playSound(loc, Sound.ENTITY_IRON_GOLEM_DEATH, 1, 1);
 					defender.setHealth(0);
 				}
