@@ -25,6 +25,7 @@ import org.bukkit.entity.Player;
 import org.bukkit.event.EventHandler;
 import org.bukkit.event.Listener;
 import org.bukkit.event.block.Action;
+import org.bukkit.event.entity.PlayerDeathEvent;
 import org.bukkit.event.player.PlayerInteractEntityEvent;
 import org.bukkit.event.player.PlayerInteractEvent;
 import org.bukkit.event.player.PlayerQuitEvent;
@@ -40,9 +41,9 @@ import org.bukkit.potion.PotionEffectType;
 import org.bukkit.scheduler.BukkitRunnable;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Objects;
 import java.util.UUID;
 
@@ -73,24 +74,31 @@ public class Priest extends CoinKit implements Listener {
         // Weapon
         es.hotbar[0] = CSItemCreator.weapon(new ItemStack(Material.SPECTRAL_ARROW),
                 Component.text("Holy Staff", NamedTextColor.GREEN),
-                Arrays.asList(Component.empty(),
-                        Component.text("Right click to shoot a bolt of light, ", NamedTextColor.AQUA),
-                        Component.text("which does damage to enemies", NamedTextColor.AQUA)), null, meleeDamage);
+                List.of(Component.empty(),
+                        Component.text("Right click to shoot a bolt of light, ", NamedTextColor.BLUE),
+                        Component.text("which does damage to enemies", NamedTextColor.BLUE),
+                        Component.empty(),
+                        Component.text("55 Melee Damage", NamedTextColor.DARK_GREEN)), null, meleeDamage);
         // Voted Weapon
         es.votedWeapon = new Tuple<>(
                 CSItemCreator.weapon(new ItemStack(Material.SPECTRAL_ARROW),
                         Component.text("Holy Staff", NamedTextColor.GREEN),
-                        Arrays.asList(Component.empty(),
-                                Component.text("Right click to shoot a bolt of light, ", NamedTextColor.AQUA),
-                                Component.text("which does damage to enemies", NamedTextColor.AQUA),
+                        List.of(Component.empty(),
+                                Component.text("Right click to shoot a bolt of light, ", NamedTextColor.BLUE),
+                                Component.text("which does damage to enemies", NamedTextColor.BLUE),
                                 Component.empty(),
-                                Component.text("- voted: +2 damage", NamedTextColor.AQUA)),
+                                Component.text("55 Melee Damage", NamedTextColor.DARK_GREEN),
+								Component.text("⁎ Voted: +2 Melee Damage", NamedTextColor.DARK_AQUA)),
                         Collections.singletonList(new Tuple<>(Enchantment.DAMAGE_UNDEAD, 5)), meleeDamage + 2),
                 0);
 
         // Chestplate
         es.chest = CSItemCreator.leatherArmor(new ItemStack(Material.LEATHER_CHESTPLATE),
-                Component.text("Priest's robe", NamedTextColor.GREEN), null, null,
+                Component.text("Priest's robe", NamedTextColor.GREEN),
+                List.of(Component.text("» Gold Vex Trim", NamedTextColor.DARK_GRAY),
+                        Component.empty(),
+                        Component.text(health + " HP", NamedTextColor.DARK_GREEN),
+                        Component.text(regen + " Regen", NamedTextColor.DARK_GREEN)), null,
                 Color.fromRGB(20, 0, 24));
         ItemMeta chest = es.chest.getItemMeta();
         ArmorMeta chestMeta = (ArmorMeta) chest;
@@ -101,7 +109,11 @@ public class Priest extends CoinKit implements Listener {
 
         // Leggings
         es.legs = CSItemCreator.leatherArmor(new ItemStack(Material.LEATHER_LEGGINGS),
-                Component.text("Priest's Leggings", NamedTextColor.GREEN), null, null,
+                Component.text("Priest's Leggings", NamedTextColor.GREEN),
+                List.of(Component.text("» Gold Vex Trim", NamedTextColor.DARK_GRAY),
+                        Component.empty(),
+                        Component.text(health + " HP", NamedTextColor.DARK_GREEN),
+                        Component.text(regen + " Regen", NamedTextColor.DARK_GREEN)), null,
                 Color.fromRGB(20, 0, 24));
         ItemMeta legs = es.legs.getItemMeta();
         ArmorMeta legsMeta = (ArmorMeta) legs;
@@ -112,12 +124,21 @@ public class Priest extends CoinKit implements Listener {
 
         // Boots
         es.feet = CSItemCreator.leatherArmor(new ItemStack(Material.LEATHER_BOOTS),
-                Component.text("Priest's Boots", NamedTextColor.GREEN), null, null,
+                Component.text("Priest's Boots", NamedTextColor.GREEN),
+                List.of(Component.text("» Gold Vex Trim", NamedTextColor.DARK_GRAY),
+                        Component.empty(),
+                        Component.text(health + " HP", NamedTextColor.DARK_GREEN),
+                        Component.text(regen + " Regen", NamedTextColor.DARK_GREEN)), null,
                 Color.fromRGB(20, 0, 24));
         // Voted Boots
         es.votedFeet = CSItemCreator.leatherArmor(new ItemStack(Material.LEATHER_BOOTS),
                 Component.text("Priest's Boots", NamedTextColor.GREEN),
-                Collections.singletonList(Component.text("- voted: Depth Strider II", NamedTextColor.AQUA)),
+                List.of(Component.text("» Gold Vex Trim", NamedTextColor.DARK_GRAY),
+                        Component.empty(),
+                        Component.text(health + " HP", NamedTextColor.DARK_GREEN),
+                        Component.text(regen + " Regen", NamedTextColor.DARK_GREEN),
+                        Component.empty(),
+                        Component.text("⁎ Voted: Depth Strider II", NamedTextColor.DARK_AQUA)),
                 Collections.singletonList(new Tuple<>(Enchantment.DEPTH_STRIDER, 2)),
                 Color.fromRGB(20, 0, 24));
         ItemMeta boots = es.feet.getItemMeta();
@@ -131,7 +152,7 @@ public class Priest extends CoinKit implements Listener {
         // Gouge
         holyBook = CSItemCreator.weapon(new ItemStack(Material.BOOK),
                 Component.text("Holy Bible", NamedTextColor.GREEN),
-                Arrays.asList(Component.empty(),
+                List.of(Component.empty(),
                         Component.text("Select an ally with this holy book.", NamedTextColor.AQUA),
                         Component.text("This ally will receive regeneration III", NamedTextColor.AQUA),
                         Component.text("until you select a different ally.", NamedTextColor.AQUA)),
@@ -190,10 +211,7 @@ public class Priest extends CoinKit implements Listener {
      */
     @EventHandler
     public void clickBible(PlayerInteractEntityEvent e) {
-        Player p = e.getPlayer();
-        UUID uuid = p.getUniqueId();
-        ItemStack book = p.getInventory().getItemInMainHand();
-        int cooldown = p.getCooldown(Material.BOOK);
+        UUID uuid = e.getPlayer().getUniqueId();
 
         // Prevent using in lobby
         if (InCombat.isPlayerInLobby(uuid)) {
@@ -203,6 +221,8 @@ public class Priest extends CoinKit implements Listener {
         if (!Objects.equals(Kit.equippedKits.get(uuid).name, name)) {
             return;
         }
+        Player p = e.getPlayer();
+        ItemStack book = p.getInventory().getItemInMainHand();
         if (!book.getType().equals(Material.BOOK)) {
             return;
         }
@@ -210,6 +230,7 @@ public class Priest extends CoinKit implements Listener {
                 TeamController.getTeam(e.getRightClicked().getUniqueId()) != TeamController.getTeam(p.getUniqueId())) {
             return;
         }
+        int cooldown = p.getCooldown(Material.BOOK);
         if (cooldown != 0) {
             return;
         }
@@ -224,14 +245,20 @@ public class Priest extends CoinKit implements Listener {
                     this.cancel();
                     return;
                 }
-
+                // It is possible that even with this somehow the player will keep being healed? hmm. Not sure but can't exclude the possibility.
+                if (blessings.get(p) == null || TeamController.getTeam(blessings.get(p)) != TeamController.getTeam(p.getUniqueId())
+                || !Objects.equals(Kit.equippedKits.get(uuid).name, name) || InCombat.isPlayerInLobby(blessings.get(p)) || InCombat.isPlayerInLobby(uuid)) {
+                    blessings.remove(p);
+                    unassignBook(p, book);
+                    this.cancel();
+                    return;
+                }
                 Objects.requireNonNull(Bukkit.getPlayer(blessings.get(p))).addPotionEffect((new PotionEffect(PotionEffectType.REGENERATION, 200, 3)));
-
                 AttributeInstance healthAttribute = Objects.requireNonNull(Bukkit.getPlayer(blessings.get(p))).getAttribute(Attribute.GENERIC_MAX_HEALTH);
                 assert healthAttribute != null;
                 //Priest doesn't get a heal for blessing someone who is full health.
                 if (Objects.requireNonNull(Bukkit.getPlayer(blessings.get(p))).getHealth() != healthAttribute.getBaseValue()) {
-                    UpdateStats.addHeals(p.getUniqueId(), 1);
+                    Bukkit.getScheduler().runTaskAsynchronously(Main.plugin, () -> UpdateStats.addHeals(p.getUniqueId(), 1));
                 }
                 Messenger.sendActionInfo("Your blessing is currently affecting: " + CSNameTag.mmUsername(Bukkit.getPlayer(blessings.get(p))), p);
             }
@@ -267,11 +294,29 @@ public class Priest extends CoinKit implements Listener {
     }
 
     /**
+     * @param priest The priest using the book
+     * @param book The book being used
+     */
+    private void unassignBook(Player priest, ItemStack book) {
+
+        ItemMeta bookMeta = book.getItemMeta();
+        assert bookMeta != null;
+        bookMeta.displayName((Component.text("Holy Bible", NamedTextColor.GREEN)));
+
+        for (ItemStack item : priest.getInventory().getContents()) {
+            if (item == null) { return; }
+            if (item.getType().equals(Material.BOOK)) {
+                item.setItemMeta(bookMeta);
+            }
+        }
+    }
+
+    /**
      * @param e if a player dies remove them from the blessings list.
      */
     @EventHandler
-    public void onRespawn(PlayerRespawnEvent e) {
-            blessings.remove(e.getPlayer());
+    public void onDeath(PlayerDeathEvent e) {
+        Bukkit.getScheduler().runTaskAsynchronously(Main.plugin, () -> blessings.remove(e.getPlayer()));
     }
 
     /**
@@ -279,7 +324,7 @@ public class Priest extends CoinKit implements Listener {
      */
     @EventHandler
     public void onDisconnect(PlayerQuitEvent e) {
-        blessings.remove(e.getPlayer());
+        Bukkit.getScheduler().runTaskAsynchronously(Main.plugin, () -> blessings.remove(e.getPlayer()));
     }
 
     /**
