@@ -53,6 +53,7 @@ import org.bukkit.util.Vector;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 import java.util.Objects;
 import java.util.UUID;
 
@@ -86,21 +87,26 @@ public class Rogue extends CoinKit implements Listener {
         EquipmentSet es = new EquipmentSet();
 
         netheriteSword = CSItemCreator.weapon(new ItemStack(Material.NETHERITE_SWORD),
-                Component.text("Dagger", NamedTextColor.GREEN), null, null, 32);
+                Component.text("Dagger", NamedTextColor.GREEN),
+                List.of(Component.empty(),
+                        Component.text("32 Melee Damage", NamedTextColor.DARK_GREEN)),
+                null, 32);
         // Weapon
         es.hotbar[0] = netheriteSword;
 
         // Voted weapon
         netheriteSwordVoted = CSItemCreator.weapon(new ItemStack(Material.NETHERITE_SWORD),
                 Component.text("Dagger", NamedTextColor.GREEN),
-                Collections.singletonList(Component.text("- voted: +2 damage", NamedTextColor.AQUA)),
+                List.of(Component.empty(),
+                        Component.text("34 Melee Damage", NamedTextColor.DARK_GREEN),
+								Component.text("⁎ Voted: +2 Melee Damage", NamedTextColor.DARK_AQUA)),
                 Collections.singletonList(new Tuple<>(Enchantment.LOOT_BONUS_MOBS, 0)), 34);
         es.votedWeapon = new Tuple<>(netheriteSwordVoted, 0);
 
         // Voted weapon
         poisonSwordVoted = CSItemCreator.weapon(new ItemStack(Material.GOLDEN_SWORD),
                 Component.text("Poison Dagger", NamedTextColor.GREEN),
-                Collections.singletonList(Component.text("- special: +2 damage", NamedTextColor.GREEN)),
+                Collections.singletonList(Component.text("⁎ Voted: +2 Melee Damage", NamedTextColor.GREEN)),
                 Collections.singletonList(new Tuple<>(Enchantment.LOOT_BONUS_MOBS, 0)), 34);
         es.votedWeapon = new Tuple<>(netheriteSwordVoted, 0);
 
@@ -170,7 +176,12 @@ public class Rogue extends CoinKit implements Listener {
 
         // Chestplate
         es.chest = CSItemCreator.leatherArmor(new ItemStack(Material.LEATHER_CHESTPLATE),
-                Component.text("Leather Chestplate", NamedTextColor.GREEN), null, null,
+                Component.text("Leather Chestplate", NamedTextColor.GREEN),
+                List.of(Component.text("» Netherite Coast Trim", NamedTextColor.DARK_GRAY),
+                        //Component.text("\uD800\uDF4A Netherite Coast Trim", NamedTextColor.DARK_GRAY),
+                        Component.empty(),
+                        Component.text(health + " HP", NamedTextColor.DARK_GREEN),
+                        Component.text(regen + " Regen", NamedTextColor.DARK_GREEN)), null,
                 Color.fromRGB(15, 15, 15));
         ItemMeta chest = es.chest.getItemMeta();
         ArmorMeta chestMeta = (ArmorMeta) chest;
@@ -181,20 +192,31 @@ public class Rogue extends CoinKit implements Listener {
 
         // Leggings
         es.legs = CSItemCreator.leatherArmor(new ItemStack(Material.LEATHER_LEGGINGS),
-                Component.text("Leather Leggings", NamedTextColor.GREEN), null, null,
+                Component.text("Leather Leggings", NamedTextColor.GREEN),
+                List.of(Component.empty(),
+                        Component.text(health + " HP", NamedTextColor.DARK_GREEN),
+                        Component.text(regen + " Regen", NamedTextColor.DARK_GREEN)), null,
                 Color.fromRGB(19, 19, 19));
 
         // Boots
         es.feet = CSItemCreator.item(new ItemStack(Material.NETHERITE_BOOTS),
                 Component.text("Rogue Boots", NamedTextColor.GREEN),
-                Collections.singletonList(Component.text("- Feather Falling XV", NamedTextColor.AQUA)),
+                List.of(Component.empty(),
+                        Component.text(health + " HP", NamedTextColor.DARK_GREEN),
+                        Component.text(regen + " Regen", NamedTextColor.DARK_GREEN),
+                        Component.empty(),
+                        Component.text("◆ Feather Falling XV", NamedTextColor.DARK_PURPLE)),
                 Collections.singletonList(new Tuple<>(Enchantment.PROTECTION_FALL, 15)));
         // Voted Boots
         es.votedFeet = CSItemCreator.item(new ItemStack(Material.NETHERITE_BOOTS),
                 Component.text("Rogue Boots", NamedTextColor.GREEN),
-                Arrays.asList(Component.text("- Feather Falling XV", NamedTextColor.AQUA),
-                        Component.text("- voted: Depth Strider II", NamedTextColor.AQUA)),
-                Arrays.asList(new Tuple<>(Enchantment.DEPTH_STRIDER, 3), new Tuple<>(Enchantment.PROTECTION_FALL, 15)));
+                List.of(Component.empty(),
+                        Component.text(health + " HP", NamedTextColor.DARK_GREEN),
+                        Component.text(regen + " Regen", NamedTextColor.DARK_GREEN),
+                        Component.empty(),
+                        Component.text("◆ Feather Falling XV", NamedTextColor.DARK_PURPLE),
+                        Component.text("⁎ Voted: Depth Strider II", NamedTextColor.DARK_AQUA)),
+                Arrays.asList(new Tuple<>(Enchantment.DEPTH_STRIDER, 2), new Tuple<>(Enchantment.PROTECTION_FALL, 15)));
 
 
 
@@ -456,6 +478,10 @@ public class Rogue extends CoinKit implements Listener {
      */
     @EventHandler(priority = EventPriority.LOW)
     public void changeTrackArrowDamage(ProjectileHitEvent e) {
+        if (e.getEntity().getShooter() instanceof Player &&
+            !Objects.equals(Kit.equippedKits.get(((Player) e.getEntity().getShooter()).getUniqueId()).name, name))
+            return;
+
         if (e.getEntity() instanceof Arrow) {
             Arrow arrow = (Arrow) e.getEntity();
 
