@@ -39,7 +39,7 @@ public class Vanguard extends CoinKit implements Listener, CommandExecutor {
 
     private static final int health = 270;
     private static final double regen = 10.5;
-    private static final double meleeDamage = 57;
+    private static final double meleeDamage = 50;
     private static final int ladderAmount = 4;
 
     private static final ArrayList<UUID> vanguards = new ArrayList<>();
@@ -56,34 +56,49 @@ public class Vanguard extends CoinKit implements Listener, CommandExecutor {
         // Weapon
         es.hotbar[0] = CSItemCreator.weapon(new ItemStack(Material.DIAMOND_SWORD),
                 Component.text("Reinforced Iron Sword", NamedTextColor.GREEN),
-                Collections.singletonList(Component.text("Right-click to activate charge ability.", NamedTextColor.AQUA)),
+                List.of(Component.empty(),
+                        Component.text("57 Melee Damage", NamedTextColor.DARK_GREEN)),
                 null, meleeDamage);
         // Voted Weapon
         es.votedWeapon = new Tuple<>(
                 CSItemCreator.weapon(new ItemStack(Material.DIAMOND_SWORD),
                         Component.text("Reinforced Iron Sword", NamedTextColor.GREEN),
-                        List.of(Component.text("Right-click to activate charge ability.", NamedTextColor.AQUA),
-                                Component.text("- voted: +2 damage", NamedTextColor.AQUA)),
+                        List.of(Component.empty(),
+                                Component.text("59 Melee Damage", NamedTextColor.DARK_GREEN),
+								Component.text("⁎ Voted: +2 Melee Damage", NamedTextColor.DARK_AQUA)),
                         Collections.singletonList(new Tuple<>(Enchantment.LOOT_BONUS_MOBS, 0)), meleeDamage + 2),
                 0);
 
         // Chestplate
         es.chest = CSItemCreator.leatherArmor(new ItemStack(Material.LEATHER_CHESTPLATE),
-                Component.text("Leather Tunic", NamedTextColor.GREEN), null, null,
+                Component.text("Leather Tunic", NamedTextColor.GREEN),
+                List.of(Component.empty(),
+                        Component.text(health + " HP", NamedTextColor.DARK_GREEN),
+                        Component.text(regen + " Regen", NamedTextColor.DARK_GREEN)), null,
                 Color.fromRGB(99, 179, 101));
 
         // Leggings
         es.legs = CSItemCreator.item(new ItemStack(Material.IRON_LEGGINGS),
-                Component.text("Iron Leggings", NamedTextColor.GREEN), null, null);
+                Component.text("Iron Leggings", NamedTextColor.GREEN),
+                List.of(Component.empty(),
+                        Component.text(health + " HP", NamedTextColor.DARK_GREEN),
+                        Component.text(regen + " Regen", NamedTextColor.DARK_GREEN)), null);
 
         // Boots
         es.feet = CSItemCreator.leatherArmor(new ItemStack(Material.LEATHER_BOOTS),
-                Component.text("Leather Boots", NamedTextColor.GREEN), null, null,
+                Component.text("Leather Boots", NamedTextColor.GREEN),
+                List.of(Component.empty(),
+                        Component.text(health + " HP", NamedTextColor.DARK_GREEN),
+                        Component.text(regen + " Regen", NamedTextColor.DARK_GREEN)), null,
                 Color.fromRGB(99, 179, 101));
         // Voted boots
         es.votedFeet = CSItemCreator.leatherArmor(new ItemStack(Material.LEATHER_BOOTS),
                 Component.text("Leather Boots", NamedTextColor.GREEN),
-                Collections.singletonList(Component.text("- voted: Depth Strider II", NamedTextColor.AQUA)),
+                List.of(Component.empty(),
+                        Component.text(health + " HP", NamedTextColor.DARK_GREEN),
+                        Component.text(regen + " Regen", NamedTextColor.DARK_GREEN),
+                        Component.empty(),
+                        Component.text("⁎ Voted: Depth Strider II", NamedTextColor.DARK_AQUA)),
                 Collections.singletonList(new Tuple<>(Enchantment.DEPTH_STRIDER, 2)),
                 Color.fromRGB(99, 179, 101));
 
@@ -105,19 +120,16 @@ public class Vanguard extends CoinKit implements Listener, CommandExecutor {
      */
     @EventHandler
     public void charge(PlayerInteractEvent e) {
-        Player p = e.getPlayer();
-        UUID uuid = p.getUniqueId();
-        int cooldown = p.getCooldown(Material.DIAMOND_SWORD);
-
+        UUID uuid = e.getPlayer().getUniqueId();
         // Prevent using in lobby
         if (InCombat.isPlayerInLobby(uuid)) {
             return;
         }
-
+        Player p = e.getPlayer();
         if (Objects.equals(Kit.equippedKits.get(uuid).name, name)) {
             if (p.getInventory().getItemInMainHand().getType().equals(Material.DIAMOND_SWORD)) {
                 if(e.getAction() == Action.RIGHT_CLICK_AIR || e.getAction() == Action.RIGHT_CLICK_BLOCK) {
-
+                    int cooldown = p.getCooldown(Material.DIAMOND_SWORD);
                     if (cooldown == 0) {
                         p.setCooldown(Material.DIAMOND_SWORD, 300);
                         Messenger.sendActionInfo("You are charging forward", p);
@@ -144,13 +156,11 @@ public class Vanguard extends CoinKit implements Listener, CommandExecutor {
     @EventHandler(ignoreCancelled = true)
     public void chargeHit(EntityDamageByEntityEvent ed) {
         if (ed.getDamager() instanceof Player) {
-            Player player = (Player) ed.getDamager();
-            UUID uuid = player.getUniqueId();
-
+            UUID uuid = ed.getDamager().getUniqueId();
             // Prevent using in lobby
             if (InCombat.isPlayerInLobby(uuid))
                 return;
-
+            Player player = (Player) ed.getDamager();
             if (vanguards.contains(uuid)) {
                 for (PotionEffect effect : player.getActivePotionEffects()) {
                     if ((effect.getType().equals(PotionEffectType.SPEED) && effect.getAmplifier() == 4)
